--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         <div id = "splash">
-            <h2><img src = "pkb1.jpg" border = "0" align = "center">&nbsp;Personal Knowledge Base</h2>
+            <h2><img src = "https://cloud.githubusercontent.com/assets/8584480/5037914/2619ab10-6b59-11e4-8f8d-04d50a1e94f0.jpg" border = "0" align = "center">&nbsp;Personal Knowledge Base</h2>
                 <div id = "login">
                 <h3>Login</h3>
                 <hr>
